infra/k8s/accounts-mongo-depl.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-mongo
  template:
    metadata:
      labels:
        app: accounts-mongo
    spec:
      containers:
      - name: accounts-mongo
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-mongo-srv
spec:
  selector:
    app: accounts-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
