infra/k8s/ingress-srv.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: coordinagent.com
      http:
        paths:
          - path: /api/accounts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: accounts-srv
                port:
                  number: 3000
